# LocalFaceSwap

./: .gitignore  CMakeLists.txt  README.md  build-native.ps1  setup-python.ps1  vcpkg.json
native/src/: main.cpp
python/: live_face_swap.py  requirements.txt
